<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_loading"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activities.LoginActivity">

    <TextView
        android:id="@+id/titleApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/title_app"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/usernameApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:hint="@string/username"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/passwordApp"
            android:textSize="22sp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:background="@drawable/button_login"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:alpha="0.6"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:background="@drawable/button_register"/>


</LinearLayout>